# nexus-ide

./: .gitignore  404.html  BUILD_AND_DEPLOY.md  README.md  index.html  package-lock.json  package.json  setup.bat  setup.sh  tailwind.config.js  webpack.config.js
src/: App.jsx  index.html  index.jsx  loricaBridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: buffer.rs  dap.rs  extensions.rs  filesystem.rs  git.rs  lib.rs  lsp.rs  main.rs  search.rs  security.rs  semantic.rs  spotify_auth.rs  state.rs  terminal.rs  updater.rs  watcher.rs
src/components/: AICopilot.jsx  AgentConfigModal.jsx  AgentCopilot.jsx  AgentToolBlock.jsx  ApplyCodeModal.jsx  AuditLog.jsx  Breadcrumbs.jsx  CommandPalette.jsx  DebugPanel.jsx  DiffViewer.jsx  Editor.jsx  ExtensionManager.jsx  FilePalette.jsx  FilePreview.jsx  FileTree.jsx  GitPanel.jsx  GlobalSearch.jsx  ImagePreview.jsx  LockScreen.jsx  LoricaDock.jsx  MarkdownMessage.jsx  MenuBar.jsx  OutlinePanel.jsx  ProblemsPanel.jsx  SecretVault.jsx  Settings.jsx  SnippetPalette.jsx  SpotifyPlayer.jsx  StatusBar.jsx  TabBar.jsx  Terminal.jsx  TimelinePanel.jsx  Toast.jsx  WelcomeTab.jsx
src/components/previews/: DocxPreview.jsx  HtmlPreview.jsx  PdfPreview.jsx  SqlSchemaPreview.jsx  XmlPreview.jsx
src/extensions/: bracketColorizer.js  indentGuides.js
src/hooks/: useAI.js  useAgent.js  useDAP.js  useFileSystem.js  useSecurity.js  useSemanticAutoReindex.js  useShortcuts.js  useSpotify.js  useUpdate.js
src/store/: appReducer.js
src/utils/: aiCommitMessage.js  aiInlineComplete.js  completions.js  keymap.js  languages.js  mentions.js  snippets.js  themes.js
