[package]
name = "lorica"
version = "2.1.0"
description = "Lorica — Secure, AI-Powered, Native IDE"
authors = ["Lorica Team"]
edition = "2021"

[lib]
name = "lorica_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto & Security
ring = "0.17"          # AES-GCM, HMAC, HKDF, PBKDF2
argon2 = "0.5"         # Password hashing (Argon2id)
zeroize = { version = "1", features = ["derive"] }  # Secure memory wiping
rand = "0.8"
base64 = "0.22"
hex = "0.4"

# File System
memmap2 = "0.9"        # Memory-mapped files
notify = { version = "6", features = ["macos_fsevent"] }  # File watcher
walkdir = "2"          # Directory traversal
pathdiff = "0.2"

# Terminal
portable-pty = "0.8"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP client for updater and debugger downloads
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
zip = "2.0"
futures-util = "0.3"

# Logging
log = "0.4"
env_logger = "0.11"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
directories = "5"      # Platform-specific dirs (AppData, etc.)
dirs = "3.0"           # Simple home directory access
url = "2.5"            # URL parsing for Spotify OAuth

# Semantic search — local embeddings (ONNX) + binary index persistence
fastembed = "5"
bincode = "1.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
